updating openapi to post app descriptor
