# backend/go/model_descriptor.go
@@ -1,46 +1,0 @@
-/*
- * ICOS Shell
- *
- * This is the ICOS Shell based on the OpenAPI 3.0 specification.
- *
- * API version: 1.0.11
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package shellbackend
-
-
-
-
-type Descriptor struct {
-
-	// Name of the application
-	Name string `json:"name"`
-
-	// List of components
-	Components []map[string]interface{} `json:"components"`
-
-	// List of requirements
-	Requirements []map[string]interface{} `json:"requirements"`
-}
-
-// AssertDescriptorRequired checks if the required fields are not zero-ed
-func AssertDescriptorRequired(obj Descriptor) error {
-	elements := map[string]interface{}{
-		"name": obj.Name,
-		"components": obj.Components,
-		"requirements": obj.Requirements,
-	}
-	for name, el := range elements {
-		if isZero := IsZeroValue(el); isZero {
-			return &RequiredError{Field: name}
-		}
-	}
-
-	return nil
-}
-
-// AssertDescriptorConstraints checks if the values respects the defined constraints
-func AssertDescriptorConstraints(obj Descriptor) error {
-	return nil
-}
